# morning-routine-productivity

./: .cz.toml  .editorconfig  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: _ci-backend.yml  _ci-frontend.yml  ci-dependabot.yml  ci.yml  deploy.yml
backend/: .dockerignore  .env.example  .gitignore  .samignore  Dockerfile  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
backend/app/: main.py
backend/app/api/: __init__.py  analytics.py  import_data.py  productivity.py  routines.py  users.py
backend/app/core/: __init__.py  auth.py  config.py  supabase.py
backend/app/models/: __init__.py  common.py  productivity.py  routine.py  user.py
backend/app/services/: __init__.py  analytics_service.py  productivity_service.py  routine_service.py  user_service.py
backend/data/: morning_routines.csv  productivity_entries.csv
backend/scripts/: download_dataset.py
backend/tests/: __init__.py  conftest.py  test_mock_supabase.py
backend/tests/api/: test_analytics.py  test_main.py  test_productivity.py  test_routines.py
backend/tests/models/: test_models.py
backend/tests/services/: test_productivity_service.py  test_routine_service.py
database/: schema.sql
database/migrations/: 001_fix_mutable_search_path.sql  002_fix_rls_auth_uid_subselect.sql
docs/: API.md  ARCHITECTURE.md  DATABASE.md  DEVELOPMENT.md  FRONTEND.md  README.md  SYSTEM_FLOWS.md
docs/00-Overview/: 01-Vision.md  02-Quickstart.md  03-Project-Map.md
docs/01-Getting-Started/: 01-Local-Setup.md  02-Configuration.md  03-Running-Services.md
docs/02-Architecture/: 01-System-Overview.md  02-Backend-Architecture.md  03-Frontend-Architecture.md  04-Data-Model.md  05-Integration-Points.md
docs/03-API/: 01-API-Overview.md  02-Auth.md  03-Error-Handling.md
docs/03-API/Endpoints/: 01-Users.md  02-Routines.md  03-Productivity.md  04-Analytics.md  05-Import.md
docs/04-Frontend/: 01-UI-Structure.md  02-Components.md  03-Hooks.md  04-State-Management.md  05-Styling.md
docs/05-Backend/: 01-Backend-Overview.md  02-Middleware-and-Config.md  03-Models.md  04-Services.md
docs/06-Database/: 01-Schema.md  02-Row-Level-Security.md  03-Triggers-and-Functions.md  04-Indexes-and-Performance.md  05-Seed-Data.md
docs/07-Operations/: 01-Deployment.md  02-CI-CD.md  03-Monitoring-and-Logging.md  04-Security.md
docs/08-Testing/: 01-Testing-Strategy.md  02-Backend-Tests.md  03-Frontend-Tests.md  04-Linting-and-Quality.md
docs/09-Contributing/: 01-Code-of-Conduct.md  02-Contributing-Guide.md  03-Issue-and-PR-Templates.md  04-Security-Policy.md
docs/10-Reference/: 01-Doc-Index.md  02-Tech-Stack.md  03-Environment-Variables.md  04-Glossary.md
docs/images/: README.md
frontend/: .dockerignore  .prettierignore  .prettierrc  Dockerfile  eslint.config.mjs  jest.config.ts  jest.setup.ts  package-lock.json  package.json  tailwind.config.js
frontend/src/: test-utils.tsx
frontend/src/__tests__/components/: BrandShapes.test.tsx  DashboardPage.test.tsx  EntriesPage.test.tsx  FullPageSpinner.test.tsx  InsightsCard.test.tsx  LoginPage.test.tsx  SignUpPage.test.tsx  Skeleton.test.tsx  StatsCard.test.tsx
frontend/src/__tests__/components/landing/: CommunityPreview.test.tsx  Features.test.tsx  (+6 more)
frontend/src/__tests__/hooks/: useScrollReveal.test.ts
frontend/src/__tests__/lib/: api.test.ts  holidays.test.ts  utils.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/components/auth/: BrandShapes.tsx
frontend/src/components/charts/: ProductivityChart.tsx  RoutineBarChart.tsx  SleepDistributionChart.tsx  index.ts
frontend/src/components/dashboard/: CircularProgress.tsx  DashboardTabs.tsx  InsightsCard.tsx  MetricRangeBar.tsx  ProfileBanner.tsx  RoutineEntryPanel.tsx  SummaryCard.tsx  index.ts
frontend/src/components/entries/: CalendarSkeleton.tsx  DeleteDialog.tsx  EmptyState.tsx  EntriesCalendar.tsx  EntriesList.tsx  EntriesListSkeleton.tsx  EntriesToolbar.tsx  EntryDetail.tsx  EntryForm.tsx  ErrorBanner.tsx  index.ts
frontend/src/components/landing/: CTABanner.tsx  CommunityPreview.tsx  Features.tsx  Fireflies.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  HowItWorks.tsx  RevealSection.tsx  index.ts
frontend/src/components/layout/: DashboardHeader.tsx  DashboardLayout.tsx  Sidebar.tsx
frontend/src/components/statistics/: StatsFilterPanel.tsx  StatsNav.tsx  index.ts
frontend/src/components/ui/: CSVUploader.tsx  FullPageSpinner.tsx  Skeleton.tsx  StatsCard.tsx
frontend/src/contexts/: AuthContext.tsx  index.ts
frontend/src/hooks/: index.ts  useApi.ts  useAuth.ts  useScrollReveal.ts
frontend/src/lib/: api.ts  holidays.ts  utils.ts
frontend/src/lib/supabase/: client.ts  server.ts
frontend/src/types/: index.ts
(+12 files in other folders)
