[tool.poetry]
name = "morning-routine-backend"
version = "0.1.0"
description = "FastAPI backend for Morning Routine & Productivity Tracker"
authors = ["Rafael Jyo Kondo <rafaeljkey@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
python-dotenv = "^1.0.1"
supabase = "^2.10.0"
pydantic = {extras = ["email"], version = "^2.10.0"}
pydantic-settings = "^2.6.0"
python-multipart = "^0.0.22"
pandas = "^2.2.3"
kagglehub = "^0.4.1"
mangum = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.0"
ruff = "^0.14.14"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
