[tool.poetry]
name = "morning-routine-backend"
version = "0.1.0"
description = "FastAPI backend for Morning Routine & Productivity Tracker"
authors = ["Rafael Jyo Kondo <rafaeljkey@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.129.0"
uvicorn = {extras = ["standard"], version = "^0.41.0"}
python-dotenv = "^1.0.1"
supabase = "^2.28.0"
pydantic = {extras = ["email"], version = "^2.10.0"}
pydantic-settings = "^2.13.0"
python-multipart = "^0.0.22"
pandas = "^2.2.3"
kagglehub = "^1.0.0"
mangum = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.0"
ruff = "^0.15.1"
mypy = "^1.14.0"
bandit = {extras = ["toml"], version = "^1.8.0"}
pre-commit = "^4.5.1"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["app", "tests"]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # function call in default argument (valid for FastAPI Depends)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
    "PLR0915", # too many statements
    "RUF013",  # implicit Optional (handled explicitly)
    "PTH",     # pathlib suggestions (optional modernization)
]

[tool.ruff.lint.per-file-ignores]
"backend/scripts/*" = ["PLR", "ARG"]  # Allow more flexibility in scripts

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true
plugins = ["pydantic.mypy", "fastapi.mypy"]

[[tool.mypy.overrides]]
module = [
    "supabase.*",
    "kagglehub.*",
    "mangum.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # Skip assert warnings in non-test code

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
